Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52574

All applications crash on Android

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.8.0 Alpha
    • 5.8.0 Alpha
    • QPA
    • None
    • Nexus 7(2013), Android 5.0.2
      Nexus 7(2012), Android 4.4
    • Android
    • c22fcf03fba1ce361b297f42f2560ba985911f05

      With the current dev branch, all apps crash with the following error:

      F/art ( 1800): art/runtime/check_jni.cc:65] JNI DETECTED ERROR IN APPLICATION: JNI GetStaticMethodID called with pending exception 'android.provider.Settings$SettingNotFoundException' thrown in unknown throw location
      F/art ( 1800): art/runtime/check_jni.cc:65] in call to GetStaticMethodID

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            stromme Christian
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes